--- a/index.html
+++ b/index.html
@@ -1101,11 +1101,11 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           <h3 style="font-size: 22px; color: #94a3b8; margin: 0; font-weight: 800;">Performance Archive</h3>
         </div>
 
-        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; text-align: left;">
+<div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; text-align: left;">
           <p style="margin: 0 0 18px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 17px;">Fall Review & Strategic Focus</p>
-          <p style="margin-bottom: 18px;">The Patriot All-America Invitational served as a competitive reference point against a national amateur field, including several of the top collegiate players. Following the event, a technical review identified <strong>long-iron performance</strong> as an area for improvement ahead of Spring qualifying.</p>
-          <p style="margin-bottom: 18px;">In coordination with the UTSA coaching staff, a short-term adjustment was approved for Joshua to remain on campus and continue <strong>individual training during January</strong> rather than participate in the scheduled team trip.</p>
-          <p style="margin-bottom: 0;">This period was used to address identified technical areas prior to Spring qualifying rounds and subsequent team events. Joshua continues preparation within the UTSA program for the Spring season.</p>
+          <p style="margin-bottom: 18px;">The <b>Patriot All-America Invitational</b> served as a competitive reference point against a <b>national amateur field</b>, including several of the <b>top collegiate players</b>. Following the event, a <b>technical review</b> identified <strong>long-iron performance</strong> as an area for improvement ahead of <b>Spring qualifying</b>.</p>
+          <p style="margin-bottom: 18px;">In coordination with the <b>UTSA coaching staff</b>, a <b>short-term adjustment</b> was approved for Joshua to remain on campus and continue <strong>individual training during January</strong> rather than participate in the scheduled team trip.</p>
+          <p style="margin-bottom: 0;">This period was used to address identified <b>technical areas</b> prior to <b>Spring qualifying rounds</b> and subsequent team events. Joshua continues preparation within the <b>UTSA program</b> for the <b>Spring season</b>.</p>
         </div>
       </div>
       <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">Posted on: DEC 2025</div>
