--- a/code/index-upcoming-ready.html
+++ b/code/index-upcoming-ready.html
@@ -291,14 +291,14 @@ gtag('config', 'G-H1JW8YBDZ8');
 
 <div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 110px 15px 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div style="text-align: center; margin-bottom: 25px; padding-top: 15px;">
+<div style="text-align: center; margin-bottom: 25px; padding-top: 15px;">
   <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase; line-height: 1.1;">
-  JOSHUA HONG
-</h1>
-    <p style="font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 600; letter-spacing: 2px;">
-      UTSA MEN'S GOLF | FRESHMAN
-    </p>
-  </div>
+    JOSHUA HONG
+  </h1>
+  <p style="font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 600; letter-spacing: 2px;">
+    UTSA MEN'S GOLF | <span style="color: #0c2340; font-weight: 800;">FRESHMAN</span>
+  </p>
+</div>
 
 <div style="margin-bottom: 20px; border-radius: 20px; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.15); background-color: #f8f8f8; position: relative;">
     <a href="https://drive.google.com/uc?export=view&id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI" target="_blank" style="display:block; text-decoration: none;">
@@ -1101,11 +1101,11 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           <h3 style="font-size: 22px; color: #94a3b8; margin: 0; font-weight: 800;">Performance Archive</h3>
         </div>
 
-        <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; font-style: italic; text-align: left;">
+<div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; text-align: left;">
           <p style="margin: 0 0 18px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 17px;">Fall Review & Strategic Focus</p>
-          <p style="margin-bottom: 18px;">The Patriot All-America Invitational served as a competitive reference point against a national amateur field, including several of the top collegiate players. Following the event, a technical review identified <strong>long-iron performance</strong> as an area for improvement ahead of Spring qualifying.</p>
-          <p style="margin-bottom: 18px;">In coordination with the UTSA coaching staff, a short-term adjustment was approved for Joshua to remain on campus and continue <strong>individual training during January</strong> rather than participate in the scheduled team trip.</p>
-          <p style="margin-bottom: 0;">This period was used to address identified technical areas prior to Spring qualifying rounds and subsequent team events. Joshua continues preparation within the UTSA program for the Spring season.</p>
+          <p style="margin-bottom: 18px;">The <b>Patriot All-America Invitational</b> served as a competitive reference point against a <b>national amateur field</b>, including several of the <b>top collegiate players</b>. Following the event, a <b>technical review</b> identified <strong>long-iron performance</strong> as an area for improvement ahead of <b>Spring qualifying</b>.</p>
+          <p style="margin-bottom: 18px;">In coordination with the <b>UTSA coaching staff</b>, a <b>short-term adjustment</b> was approved for Joshua to remain on campus and continue <strong>individual training during January</strong> rather than participate in the scheduled team trip.</p>
+          <p style="margin-bottom: 0;">This period was used to address identified <b>technical areas</b> prior to <b>Spring qualifying rounds</b> and subsequent team events. Joshua continues preparation within the <b>UTSA program</b> for the <b>Spring season</b>.</p>
         </div>
       </div>
       <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">Posted on: DEC 2025</div>
@@ -1490,9 +1490,9 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 
 
 
-<div class="footer-section" style="max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="footer-section" style="max-width: 900px; margin: 0 auto; padding: 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div style="padding: 30px 25px; background: #ffffff; border-radius: 25px; border: 1px solid #e2e8f0; box-shadow: 0 10px 30px rgba(0,0,0,0.04); box-sizing: border-box; margin-bottom: 40px;">
+  <div style="padding: 30px 10px; background: #ffffff; border-radius: 25px; border: 1px solid #e2e8f0; box-shadow: 0 10px 30px rgba(0,0,0,0.04); box-sizing: border-box; margin-bottom: 40px;">
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="background: #4285F4; width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 14px; color: white; box-shadow: 0 4px 10px rgba(66,133,244,0.3);">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
@@ -1506,9 +1506,10 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">AI-Powered Profile Overview</h3>
 </div>
     
-<div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
-  <b>Joshua Hong (b. 2007)</b> is a <b>Korean-Mexican collegiate golfer</b> competing in <b>NCAA Division I</b> at the <b>University of Texas at San Antonio (UTSA)</b>. He entered the <b>UTSA men’s golf program in 2025</b>. Before beginning his collegiate career, he won the <b>FMG National Junior Championship</b> in Mexico in the <b>2023–2024 and 2024–2025 seasons</b>. Both titles were determined by <b>cumulative season-long performance</b>. He also won <b>regional season championships</b> in multiple competitive zones. He won the <b>Zona GADO</b> regional season title in <b>2021–2022 and 2022–2023</b>, and the <b>Zona Centro</b> regional season title in <b>2024–2025</b>. Each title was awarded based on <b>aggregate results</b> over the course of the season. Prior to specializing in golf, he participated in <b>tennis and baseball</b>.
+<div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px 15px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
+  <b>Joshua Hong (b. 2007)</b> is a <b>Korean-Mexican collegiate golfer</b> competing in <b>NCAA Division I</b> at the <b>University of Texas at San Antonio (UTSA)</b>. He joined the program in <b>Fall 2025</b>. Prior to NCAA competition, he recorded <b>multiple junior season titles</b> in Mexico.
 </div>
+
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 12px; margin-top: 30px;">
 <a href="https://www.wagr.com/playerprofile/joshua-hong-40704" target="_blank" style="text-decoration: none; background: #1a73e8; color: white; padding: 14px 5px; border-radius: 12px; text-align: center; font-size: 13px; font-weight: 800; display: flex; align-items: center; justify-content: center; gap: 8px; transition: opacity 0.2s;">
