--- a/code/ncaa-up-coming-ready.html
+++ b/code/ncaa-up-coming-ready.html
@@ -45,12 +45,11 @@
       "abbreviation": "UTSA"
     }
   },
-  "description": "NCAA Division I golfer at UTSA. Two-time FMG National Junior Champion (2023-2025) and three-time consecutive Regional Champion across Zona GADO and Zona Centro.",
+  "description": "NCAA Division I golfer at UTSA. Two-time FMG National Junior Champion (2023–2025) and two-time consecutive Regional Champion across Zona GADO and Zona Centro.",
   "award": [
     "FMG National Junior Championship Winner (2023-2024 Season)",
     "FMG National Junior Championship Winner (2024-2025 Season)",
-    "Zona GADO Regional Season Champion (2021-2022)",
-    "Zona GADO Regional Season Champion (2022-2023)",
+    "Zona GADO Regional Season Champion (2023-2024)",
     "Zona Centro Regional Season Champion (2024-2025)",
     "Billy Dettlaff Sportsmanship Award (The Junior Players Championship)"
   ],
