--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -813,16 +813,27 @@
                     <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; box-sizing: border-box;">Tournament Prep — Technical Memo</span>
                 </div>
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
-                    <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
-                        • Military City Collegiate (Feb 23–24, TPC San Antonio)<br>
-                        • March Event (Mar 2–3, 4-day interval)<br>
-                        • Course Preparation: Home-course management patterns reviewed.
-                    </p>
-                    <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
-                        • Competition Scheduling: Practice and recovery structured for continuity.<br>
-                        • Performance: Strategic decision-making reviewed in advance.
-                    </p>
-                </div>
+    <div style="flex: 1; min-width: 240px; box-sizing: border-box;">
+        <div style="margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
+            • Military City Collegiate (Feb 23–24, TPC San Antonio)
+        </div>
+        <div style="margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
+            • March Event (Mar 2–3, 4-day interval)
+        </div>
+        <div style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
+            • Course Preparation: Home-course management patterns reviewed.
+        </div>
+    </div>
+
+    <div style="flex: 1; min-width: 240px; box-sizing: border-box;">
+        <div style="margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
+            • Competition Scheduling: Practice and recovery structured for continuity.
+        </div>
+        <div style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
+            • Performance: Strategic decision-making reviewed in advance.
+        </div>
+    </div>
+</div>
             </div>
 
 
