--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -812,25 +812,26 @@
                     <h5 style="margin: 0; font-size: 14px; color: #d32f2f; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">Upcoming Competition Focus</h5>
                     <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; box-sizing: border-box;">Tournament Prep — Technical Memo</span>
                 </div>
-                <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
+              
+<div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
     <div style="flex: 1; min-width: 240px; box-sizing: border-box;">
-        <div style="margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
-            • Military City Collegiate (Feb 23–24, TPC San Antonio)
+        <div style="position: relative; margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px;">
+            <span style="position: absolute; left: 0;">•</span>Military City Collegiate (Feb 23–24, TPC San Antonio)
         </div>
-        <div style="margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
-            • March Event (Mar 2–3, 4-day interval)
+        <div style="position: relative; margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px;">
+            <span style="position: absolute; left: 0;">•</span>March Event (Mar 2–3, 4-day interval)
         </div>
-        <div style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
-            • Course Preparation: Home-course management patterns reviewed.
+        <div style="position: relative; margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px;">
+            <span style="position: absolute; left: 0;">•</span>Course Preparation: Home-course management patterns reviewed.
         </div>
     </div>
 
     <div style="flex: 1; min-width: 240px; box-sizing: border-box;">
-        <div style="margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
-            • Competition Scheduling: Practice and recovery structured for continuity.
+        <div style="position: relative; margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px;">
+            <span style="position: absolute; left: 0;">•</span>Competition Scheduling: Practice and recovery structured for continuity.
         </div>
-        <div style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px; text-indent: -15px;">
-            • Performance: Strategic decision-making reviewed in advance.
+        <div style="position: relative; margin: 0 0 4px 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; padding-left: 15px;">
+            <span style="position: absolute; left: 0;">•</span>Performance: Strategic decision-making reviewed in advance.
         </div>
     </div>
 </div>
