--- a/news-media.html
+++ b/news-media.html
@@ -310,7 +310,7 @@
       
       <div style="width: 100%; margin-top: 15px; display: flex; align-items: center; justify-content: flex-end; gap: 0;">
         <p style="color: #94a3b8; font-size: 11px; margin: 0; font-weight: 700; letter-spacing: 0.5px; text-transform: uppercase;">
-          Last update: Feb 19, 2026
+          Last update: Feb 21, 2026
         </p>
       </div>
     </div>
@@ -890,8 +890,8 @@
     멕시코 한국인 골프 선수 자슈아 홍 (Joshua Hong Golf) 공식 기록 페이지
   </p>
       <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
-        Verified News Highlights<br>
-        Official Media Repository • Joshua Hong
+        Media Archive<br>
+        Official Media Record
       </p>
     </div>
    
