--- a/news-media.html
+++ b/news-media.html
@@ -338,7 +338,7 @@
                 Joshua Hong’s Freshman Launch at UTSA
               </div>
               <p style="font-size: 15px; color: #555; line-height: 1.6; margin: 0 0 20px 0;">
-                An exclusive deep-dive interview covering Joshua's transition to NCAA Division I, his early successes, and his vision for the road ahead with the UTSA Roadrunners.
+                An exclusive deep-dive interview covering Joshua's transition to NCAA Division I and early freshman competition.
               </p>
               <div style="display: inline-block; color: #0c2340; font-weight: bold; font-size: 14px; text-decoration: underline;">
                 Read Full Article →
@@ -873,7 +873,7 @@
               <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
             </svg>
           </span>
-          Latest News on Google
+          External News Search (Google)
         </div>
       </a>
       
