--- a/reference-links.html
+++ b/reference-links.html
@@ -284,7 +284,7 @@
   <div style="text-align: center; margin-bottom: 35px;">
     <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase;">REFERENCE & LINKS</h1>
     <p style="font-size: 16px; color: #666; margin: 5px 0 0 0; font-weight: 500; letter-spacing: 1px;">
-      Verified Records 
+      Official Records & Source Arhive 
     </p>
   </div>
 </div>
@@ -312,7 +312,7 @@
       </p>
       <div style="width: 100%; margin-top: 15px; display: flex; align-items: center; justify-content: flex-end; gap: 0;">
         <p style="color: #94a3b8; font-size: 11px; margin: 0; font-weight: 700; letter-spacing: 0.5px; text-transform: uppercase;">
-          Last Updated: Feb 19, 2026
+          Last Updated: Feb 21, 2026
         </p>
       </div>
     </div>
@@ -443,7 +443,7 @@
         <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
       </svg>
     </div>
-    <span style="letter-spacing: -0.5px;">International Championships (National Team)</span>
+    <span style="letter-spacing: -0.5px;">International Championships (National Team Representation)</span>
   </div>
 
   <div style="padding: 25px; background-color: #fcfcfc;">
@@ -521,7 +521,7 @@
       <path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path>
     </svg>
   </div>
-  <span style="letter-spacing: -0.5px;">National Junior Tournaments (FMG/WAGR)</span>
+  <span style="letter-spacing: -0.5px;">National Junior Tournaments (FMG / WAGR Listed Events)</span>
 </div>
     <div style="padding: 25px; background-color: #fcfcfc; font-size: 13px;">
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;">
@@ -604,7 +604,7 @@
     <div style="margin-top: 15px; border-top: 1px dotted #ccc; padding-top: 15px; display: flex; align-items: flex-start;">
       <span style="margin-right: 8px; flex-shrink: 0;">•</span>
       <div style="line-height: 1.5;">
-        <b style="color: #333;">JGS (Junior Golf Scoreboard):</b> Verified as of Aug 12, 2025 (Official Record Archived)
+        <b style="color: #333;">JGS (Junior Golf Scoreboard):</b> Archived Record (Aug 12, 2025 Snapshot)
       </div>
     </div>
 
@@ -616,8 +616,8 @@
     멕시코 한국인 골프 선수 자슈아 홍 (Joshua Hong Golf) 공식 기록 페이지
   </p>
     <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
-      Verified Portfolio Data<br>
-      Official Source Repository • Joshua Hong
+      Official Source Repository<br>
+      Career Data Archive
     </p>
   </div>
 
