--- a/junior-career.html
+++ b/junior-career.html
@@ -555,7 +555,7 @@
       
       <div style="background: #f1f4f9; padding: 25px; border-radius: 15px; border: 1px solid #d1d9e6; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
         <div style="font-size: 13px; color: #7f8c8d; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">WAGR (Mexico Junior)</div>
-        <div style="font-size: 32px; font-weight: 800; color: #d32f2f; margin: 10px 0;">#1 RANK</div>
+        <div style="font-size: 32px; font-weight: bold; color: #d32f2f; margin: 10px 0;">#1 RANK</div>
         <div style="font-size: 12px; color: #555; line-height: 1.6;">
           World Amateur: #450<br>
           <span style="font-weight: bold; color: #0c2340;">Mexico Absolute: #7</span>
@@ -564,7 +564,7 @@
 
       <div style="background: #f1f4f9; padding: 25px; border-radius: 15px; border: 1px solid #d1d9e6; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
         <div style="font-size: 13px; color: #7f8c8d; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">JGS (Mexico Overall)</div>
-        <div style="font-size: 32px; font-weight: 800; color: #0c2340; margin: 10px 0;">#1 RANK</div>
+        <div style="font-size: 32px; font-weight: bold; color: #0c2340; margin: 10px 0;">#1 RANK</div>
         <div style="font-size: 12px; color: #555; line-height: 1.6;">
           World JGS Ranking: #100<br>
           <span style="font-weight: bold; color: #1b5e20;"> JGS Class of 2025: #42</span>
