--- a/junior-career.html
+++ b/junior-career.html
@@ -579,33 +579,47 @@
       Major Honors & Recognition
     </h3>
     <div style="display: grid; grid-template-columns: 1fr; gap: 20px;">
-<div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #806600; display: flex; align-items: center;">
-  <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(128, 102, 0, 0.2); width: 44px; height: 44px; border-radius: 10px;">
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
-      <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
-      <path d="M4 22h16"></path>
-      <path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path>
-      <path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path>
-      <path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path>
-    </svg>
-  </div>
-  <div>
+      <div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #806600; display: flex; align-items: center;">
+        <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(128, 102, 0, 0.2); width: 44px; height: 44px; border-radius: 10px;">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
+            <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
+            <path d="M4 22h16"></path>
+            <path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path>
+            <path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path>
+            <path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path>
+          </svg>
+        </div>
+        <div>
           <b style="color: #ff5a00; display: block; margin-bottom: 3px;">FMG National Junior Champion</b>
           Consecutive Seasons 2023–24 & 2024–25
         </div>
       </div>
-<div style="background: rgba(255,255,255,0.12); padding: 18px 25px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.2); display: flex; align-items: center;">
-  <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(255, 255, 255, 0.1); width: 44px; height: 44px; border-radius: 10px;">
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-      <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
-    </svg>
-  </div>
-  <div>
+
+      <div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #94a3b8; display: flex; align-items: center;">
+        <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(148, 163, 184, 0.2); width: 44px; height: 44px; border-radius: 10px;">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+          </svg>
+        </div>
+        <div>
+          <b style="color: #ffffff; display: block; margin-bottom: 3px;">Regional Season Champion (Zona GADO & Zona Centro)</b>
+          Consecutive Season Titles: 2023–24 (Zona Gado) & 2024–25 (Zona Centro)
+        </div>
+      </div>
+
+      <div style="background: rgba(255,255,255,0.12); padding: 18px 25px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.2); display: flex; align-items: center;">
+        <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(255, 255, 255, 0.1); width: 44px; height: 44px; border-radius: 10px;">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+          </svg>
+        </div>
+        <div>
           <b style="color: #ffcc00; display: block; margin-bottom: 3px;">Billy Dettlaff Sportsmanship Award</b>
           The Junior Players Championship 2024
         </div>
       </div>
+
       <div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #ff5a00; display: flex; align-items: center;">
         <span style="font-size: 24px; margin-right: 15px;">🇲🇽</span>
         <div>
@@ -614,7 +628,7 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
 
   <div style="margin-top: 60px; padding-top: 20px; border-top: 1px solid #eee;">
 <div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #1b5e20; padding-left: 15px;">
