--- a/junior-career.html
+++ b/junior-career.html
@@ -321,8 +321,8 @@
         </p>
         
         <ul style="list-style: none; padding: 0; margin: 0; font-size: 15px; color: #333; line-height: 1.9;">
-            <li style="margin-bottom: 8px;">• <strong style="color: #0c2340;">20+ Official Victories:</strong> WAGR, FMG, MJGA, GADO, US Kids, and JGANC sanctioned events.</li>
-            <li style="margin-bottom: 8px;">• <strong style="color: #0c2340;">40+ Top-3 Finishes:</strong> Podium placements in national and international tournaments.</li>
+            <li style="margin-bottom: 8px;">• <strong style="color: #0c2340;">20 Official Victories:</strong> WAGR, FMG, MJGA, GADO, US Kids, and JGANC sanctioned events.</li>
+            <li style="margin-bottom: 8px;">• <strong style="color: #0c2340;">40 Top-3 Finishes:</strong> Podium placements in national and international tournaments.</li>
             <li style="margin-bottom: 8px;">• <strong style="color: #0c2340;">National Representative:</strong> Selected for the Mexican National Team in World Championship events.</li>
             <li style="margin-bottom: 8px;">• <strong style="color: #0c2340;">FMG National Champion:</strong> Two-time consecutive title holder (2023–24, 2024–25).</li>
             <li style="margin-bottom: 8px;">• <strong style="color: #0c2340;">Regional Titles:</strong> Winner of multiple Zonas and Interzonas championships.</li>
