--- a/junior-career.html
+++ b/junior-career.html
@@ -596,6 +596,29 @@
         </div>
       </div>
 
+      <div style="background-color: #0c2340; color: white; padding: 40px; border-radius: 20px; margin-bottom: 60px; box-shadow: 0 10px 30px rgba(12, 35, 64, 0.2);">
+    <h3 style="font-size: 22px; color: #ff5a00; margin-top: 0; margin-bottom: 25px; border-bottom: 1px solid rgba(255, 90, 0, 0.3); padding-bottom: 10px;">
+      Major Honors & Recognition
+    </h3>
+    <div style="display: grid; grid-template-columns: 1fr; gap: 20px;">
+      
+      <div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #806600; display: flex; align-items: center;">
+        <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(128, 102, 0, 0.2); width: 44px; height: 44px; border-radius: 10px;">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
+            <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
+            <path d="M4 22h16"></path>
+            <path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path>
+            <path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path>
+            <path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path>
+          </svg>
+        </div>
+        <div>
+          <b style="color: #ff5a00; display: block; margin-bottom: 3px;">FMG National Junior Championship (Season-long)</b>
+          Consecutive Titles: 2023–24 & 2024–25 (Aggregate Season Points)
+        </div>
+      </div>
+
       <div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #94a3b8; display: flex; align-items: center;">
         <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(148, 163, 184, 0.2); width: 44px; height: 44px; border-radius: 10px;">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
@@ -603,8 +626,8 @@
           </svg>
         </div>
         <div>
-          <b style="color: #ffffff; display: block; margin-bottom: 3px;">Regional Season Champion (Zona GADO & Zona Centro)</b>
-          Consecutive Season Titles: 2023–24 (Zona Gado) & 2024–25 (Zona Centro)
+          <b style="color: #ffffff; display: block; margin-bottom: 3px;">Regional Season Championship (Zona GADO & Zona Centro)</b>
+          Consecutive Titles: 2023–24 (Zona Gado) & 2024–25 (Zona Centro)
         </div>
       </div>
 
@@ -627,9 +650,9 @@
           Member of the National Team in numerous International Junior Competitions
         </div>
       </div>
+
     </div>
 </div>
-
   <div style="margin-top: 60px; padding-top: 20px; border-top: 1px solid #eee;">
 <div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #1b5e20; padding-left: 15px;">
   <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f0fdf4; width: 36px; height: 36px; border-radius: 8px; border: 1px solid #dcfce7;">
