--- a/junior-career.html
+++ b/junior-career.html
@@ -787,7 +787,7 @@
   </p>
     <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
       Junior Career Milestones<br>
-      Official Achievement Record • Joshua Hong
+      Official Achievement Record
     </p>
   </div>
   
