--- a/index.html
+++ b/index.html
@@ -1559,7 +1559,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   </p>
   <p style="font-size: 11px; color: #bbb; text-transform: uppercase; letter-spacing: 3px; margin: 0;">
     Career Overview <br> 
-    Official Profile • Joshua Hong
+    Official Profile
   </p>
 </div>
 
