--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -2216,7 +2216,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   </p>
     <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
       Performance Data<br>
-      Official Credentials • Joshua Hong
+      Official Records
     </p>
 </div>
 </div>
