--- a/junior-career.html
+++ b/junior-career.html
@@ -591,9 +591,10 @@
           </svg>
         </div>
         <div>  
-          <b style="color: #ff5a00; display: block; margin-bottom: 3px;">FMG National Junior Championship (Season-long)</b>
-          Consecutive Titles: 2023–24 & 2024–25 (Aggregate Season Points)
+           <b style="color: #ffffff; display: block; margin-bottom: 3px;">Regional Junior Championship (Zona GADO & Centro)</b>
+              Consecutive Titles: 2023–24 & 2024–25 (Aggregate Season Points)
         </div>
+        
       </div>
 
       <div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #94a3b8; display: flex; align-items: center;">
@@ -602,9 +603,9 @@
             <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
           </svg>
         </div>
-        <div>
-          <b style="color: #ffffff; display: block; margin-bottom: 3px;">Regional Season Championship (Zona GADO & Zona Centro)</b>
-          Consecutive Titles: 2023–24 (Zona Gado) & 2024–25 (Zona Centro)
+        <div>  
+            <b style="color: #ffffff; display: block; margin-bottom: 3px;">Regional Junior Championship (Zona GADO & Centro)</b>
+              Consecutive Titles: 2023–24 & 2024–25 (Aggregate Season Points)
         </div>
       </div>
 
