--- a/junior-career.html
+++ b/junior-career.html
@@ -591,7 +591,7 @@
           </svg>
         </div>
         <div>  
-           <b style="color: #ffffff; display: block; margin-bottom: 3px;">Regional Junior Championship (Zona GADO & Centro)</b>
+           <b style="color: #ffffff; display: block; margin-bottom: 3px;">FMG National Junior Championship (Season-long)</b>
               Consecutive Titles: 2023–24 & 2024–25 (Aggregate Season Points)
         </div>
         
@@ -604,8 +604,8 @@
           </svg>
         </div>
         <div>  
-            <b style="color: #ffffff; display: block; margin-bottom: 3px;">Regional Junior Championship (Zona GADO & Centro)</b>
-              Consecutive Titles: 2023–24 & 2024–25 (Aggregate Season Points)
+            <b style="color: #ffffff; display: block; margin-bottom: 3px;">Regional Junior Championship (Season-long)</b>
+              Consecutive Titles: 2023–24 (GADO) & 2024–25 (CENTRO) (Aggregate Season Points)
         </div>
       </div>
 
