--- a/news-media.html
+++ b/news-media.html
@@ -891,7 +891,7 @@
   </p>
       <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
         Media Archive<br>
-        Official Media Record
+        Official Media Records
       </p>
     </div>
    
