--- a/reference-links.html
+++ b/reference-links.html
@@ -284,7 +284,7 @@
   <div style="text-align: center; margin-bottom: 35px;">
     <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase;">REFERENCE & LINKS</h1>
     <p style="font-size: 16px; color: #666; margin: 5px 0 0 0; font-weight: 500; letter-spacing: 1px;">
-      Official Records & Source Arhive 
+      Official Records & Source Archive 
     </p>
   </div>
 </div>
