--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -596,7 +596,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-R1-pairing.jpeg')" style="display: none;">
+              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-R1-pairing.jpeg')">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
