--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -403,7 +403,7 @@
   <div style="margin-bottom: 5px; width: 100%; box-sizing: border-box; padding: 0;">
     
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-left: 5px solid #E31837; padding-left: 20px; margin-left: 0;">
-      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">UPCOMING TOURNAMENT</h3>
+      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">ONGOING TOURNAMENT</h3>
       <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">6th Event: Military City Collegiate | Home Field</span>
     </div>
   </div>
@@ -444,7 +444,7 @@
     .live-dot {
       width: 6px;
       height: 6px;
-      background-color: #ff4d4d;
+      background-color: #10b981;
       border-radius: 50%;
       display: inline-block;
       animation: live-pulse 2s infinite ease-in-out;
@@ -570,7 +570,7 @@
     <div style="display: flex; align-items: center; gap: 12px;">
       <div style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 8px;">
         <span class="live-dot"></span>
-        UPCOMING
+        ONGOING
       </div>
       <div>
         <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Military City Collegiate (UTSA) | Feb 23-24</h2>
