--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -698,9 +698,11 @@
   </div>
 
   <div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: flex-end; align-items: center; gap: 30px;">
- <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/team" target="_blank" style="margin-right: auto; display: flex; align-items: center; gap: 8px; color: #0c2340; text-decoration: none; font-size: 11px; font-weight: 900; letter-spacing: 0.8px; text-transform: uppercase; border: 1.5px solid #0c2340; padding: 5px 12px; border-radius: 6px; transition: all 0.2s ease; background: #ffffff;">
+ <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/team" target="_blank" style="margin-right: auto; display: flex; align-items: center; gap: 8px; 
+   color: #0c2340; text-decoration: none; font-size: 11px; font-weight: 900; letter-spacing: 0.8px; text-transform: uppercase; border: 1.5px solid #0c2340; 
+   padding: 5px 12px; border-radius: 6px; transition: all 0.2s ease; background: #ffffff;">
   <span style="display: flex; align-items: center; gap: 6px;">
-    <span style="width: 5px; height: 5px; background-color: #e74c3c; border-radius: 50%; display: inline-block; animation: pulse 1.5s infinite;"></span>
+    <span style="width: 5px; height: 5px; background-color: #10b981; border-radius: 50%; display: inline-block; animation: pulse 1.5s infinite;"></span>
     LIVE LEADERBOARD
   </span>
   <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#e74c3c" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
