--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     .status-dot-live {
       width: 8px;
       height: 8px;
-      background-color: #ff4d4d;
+      background-color: #10b981;
       border-radius: 50%;
       display: inline-block;
       animation: pulse-live 2s infinite;
@@ -526,11 +526,11 @@ gtag('config', 'G-H1JW8YBDZ8');
             <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
             <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
           </svg>
-          UPCOMING ACTIVITY
+          ONGOING ACTIVITY
         </h2>
       </div>
       <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
-        Last Updated: Feb 20, 2026
+        Last Updated: Feb 21, 2026
       </div>
     </div>
     <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px;"></div>
@@ -542,7 +542,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       <div class="tournament-info" style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 250px;">
         <div style="display: flex; align-items: center; gap: 6px; background: #0c2340; padding: 6px 12px; border-radius: 6px;">
           <span class="status-dot-live"></span>
-          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">UPCOMING</span>
+          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">ONGOING</span>
         </div>
         <div>
           <div style="display: flex; align-items: baseline; gap: 6px;">
@@ -630,7 +630,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     <div style="position: relative; transition: transform 0.3s ease; display: block;">
       <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/participants" target="_blank" style="text-decoration: none; display: block;">
         <div style="background: #ffffff; padding: 30px 25px; border-radius: 24px; border: 1px solid #e1e8ed; box-shadow: 0 15px 35px rgba(0,0,0,0.06); position: relative; overflow: hidden; border-top: 6px solid #c98a2e; height: 100%; box-sizing: border-box;">
-          <div style="background: #c98a2e; color: white; padding: 5px 15px; border-radius: 0 0 10px 10px; font-size: 11px; font-weight: 800; position: absolute; top: 0; left: 25px; letter-spacing: 1px; box-shadow: 0 2px 5px rgba(201,138,46,0.2);">UPCOMING</div>
+          <div style="background: #c98a2e; color: white; padding: 5px 15px; border-radius: 0 0 10px 10px; font-size: 11px; font-weight: 800; position: absolute; top: 0; left: 25px; letter-spacing: 1px; box-shadow: 0 2px 5px rgba(201,138,46,0.2);">ONGOING</div>
           
           <h3 style="font-size: 22px; margin: 20px 0 8px 0; color: #0c2340; font-weight: 800; line-height: 1.2; display: flex; align-items: center; gap: 8px;">
             Military City Collegiate
