--- a/code/index-ongoing.html
+++ b/code/index-ongoing.html
@@ -520,7 +520,7 @@ gtag('config', 'G-H1JW8YBDZ8');
   <div class="ongoing-header-wrapper" style="width: 100%; margin-bottom: 10px; box-sizing: border-box;">
     <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 10px; box-sizing: border-box;">
       <div style="box-sizing: border-box;">
-        <h2 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #c98a2e; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
+        <h2 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #10b981; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
             <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
             <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
