--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -391,7 +391,7 @@
   </h1>
   
   <span style="color: #64748b; font-size: 12px; font-weight: 700; letter-spacing: 0.5px; padding-bottom: 2px; white-space: nowrap;">
-    Last Updated: Feb 21, 2026
+    Last Updated: Feb 22, 2026
   </span>
 </div>
 
@@ -2084,6 +2084,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       <div id="thumbScroll">
         
 <div class="thumb-page">
+  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-Lineup.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA Men's Golf 2026 Military City Collegiate Lineup" title="Joshua Hong UTSA Men's Golf 2026 Military City Collegiate Lineup" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Military-Collegiate-poster.jpg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA Men's Golf 2026 Military City Collegiate Poster" title="Joshua Hong UTSA Men's Golf 2026 Military City Collegiate Poster" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-Result-utrgv.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA Men's Golf 2026 Spring Opener Results at UTRGV" title="Joshua Hong UTSA Men's Golf 2026 Spring Opener Results at UTRGV" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r3-71.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA 2026 Spring Opener UTRGV Round 3 Score 71" title="Joshua Hong UTSA 2026 Spring Opener UTRGV Round 3 Score 71" loading="lazy" decoding="async">
@@ -2095,10 +2096,10 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-TPC-San-Antonio-fall off-season.png" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong training at the TPC San Antonio team facility during the fall off-season" title="Joshua Hong training at the TPC San Antonio team facility during the fall off-season" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Team-Photo-day.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong during the team photo day for his freshman debut season." title="Joshua Hong during the team photo day for his freshman debut season" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Get-To-Know.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong's "Get to Know" student-athlete profile information." title="Joshua Hong's "Get to Know" student-athlete profile information." loading="lazy" decoding="async">
-  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Patriot-All-America-2025-Winter.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong competing at the 2025 Winter Patriot All-America Invitational" title="Joshua Hong competing at the 2025 Winter Patriot All-America Invitational" loading="lazy" decoding="async">
 </div>
 
 <div class="thumb-page">
+  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Patriot-All-America-2025-Winter.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong competing at the 2025 Winter Patriot All-America Invitational" title="Joshua Hong competing at the 2025 Winter Patriot All-America Invitational" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/Joshua-Hong-UTSA-CGN-HIGHLIGHT.jpg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong's CGN Player Highlight feature poster" title="Joshua Hong's CGN Player Highlight feature poster" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Team-Photoday-Fran-Sam.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong with teammates Francisco Solorza and Sadbhav Acharya (Sam) during the freshman team photo day" title="Joshua Hong with teammates Francisco Solorza and Sadbhav Acharya (Sam) during the freshman team photo day" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg" onclick="popupGallery(this)" class="thumb-img pos-center" alt="Joshua Hong UTSA Men's Golf 2025-2026 Full Schedule" title="Joshua Hong UTSA Men's Golf 2025-2026 Full Schedule" loading="lazy" decoding="async">
