--- a/index.html
+++ b/index.html
@@ -1502,7 +1502,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       <line x1="16" y1="16" x2="16" y2="16"></line>
     </svg>
   </div>
-  <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">AI-Powered Profile Overview</h3>
+  <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">Profile Overview</h3>
 </div>
     
 <div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px 15px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
