--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -615,15 +615,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; style="color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; style="color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value style="font-weight: bold; style="color: #0c2340;">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value style="font-weight: bold; color: #0c2340;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
         </tr>
 
       <tr>
@@ -654,10 +654,10 @@
               <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold;">TBD-</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
         </tr>
 
         <tr>
@@ -688,10 +688,10 @@
               <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold;" style="color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold;" style="color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold;" style="color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold;" style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
         </tr>
       </tbody>
     </table>
