--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -617,7 +617,7 @@
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
             </div>
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
@@ -649,9 +649,9 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold;">TBD-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD-</span></div>
             </div>
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
@@ -683,9 +683,9 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
             </div>
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
@@ -720,7 +720,7 @@
 </style>
 
     <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
+      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total</span>
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">TBD</span>
     </div>
 
