--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -651,7 +651,7 @@
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD-</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
             </div>
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
